# ChangeLog for dev-util/rbtools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/rbtools/ChangeLog,v 1.38 2014/08/14 16:46:09 phajdan.jr Exp $

  14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> rbtools-0.6.2.ebuild:
  x86 stable wrt bug #517766

  18 Jul 2014; Michael Palimaka <kensington@gentoo.org> -rbtools-0.5.3.ebuild,
  -rbtools-0.6.1.ebuild:
  Remove old.

  18 Jul 2014; Chema Alonso <nimiux@gentoo.org> rbtools-0.6.ebuild:
  Stable for amd64 wrt bug #511060

*rbtools-0.6.2 (07 Jul 2014)

  07 Jul 2014; Michael Palimaka <kensington@gentoo.org> +rbtools-0.6.2.ebuild,
  -rbtools-0.5.7.ebuild:
  Version bump. Remove old.

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> rbtools-0.6.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> rbtools-0.6.ebuild:
  x86 stable wrt bug #511060

*rbtools-0.6.1 (10 Jun 2014)

  10 Jun 2014; Michael Palimaka <kensington@gentoo.org> +rbtools-0.6.1.ebuild:
  Version bump.

*rbtools-0.6 (19 Apr 2014)

  19 Apr 2014; Michael Palimaka <kensington@gentoo.org> +rbtools-0.6.ebuild:
  Version bump.

  04 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -rbtools-0.5.2.ebuild:
  Cleanup old.

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> rbtools-0.5.3.ebuild:
  Stable for x86, wrt bug #502808

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> rbtools-0.5.3.ebuild:
  amd64 stable, bug #502808

*rbtools-0.5.7 (02 Mar 2014)

  02 Mar 2014; Michael Palimaka <kensington@gentoo.org> +rbtools-0.5.7.ebuild:
  Version bump.

*rbtools-0.5.3 (10 Jan 2014)

  10 Jan 2014; Michael Palimaka <kensington@gentoo.org> +rbtools-0.5.3.ebuild:
  Version bump.

  01 Nov 2013; Johannes Huber <johu@gentoo.org> -rbtools-0.5.1.ebuild:
  Remove old.

  01 Nov 2013; Agostino Sarubbo <ago@gentoo.org> rbtools-0.5.2.ebuild: