@@ -4,11 +4,11 @@ DESCRIPTION=Command line tools for use with Review Board
 EAPI=5
 HOMEPAGE=http://www.reviewboard.org/
 IUSE=python_targets_python2_7
-KEYWORDS=~amd64 x86
+KEYWORDS=amd64 x86
 LICENSE=MIT
 RDEPEND=python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_7 )
 SLOT=0
 SRC_URI=http://downloads.reviewboard.org/releases/RBTools/0.6/RBTools-0.6.2.tar.gz
 _eclasses_=distutils-r1	d48d51c220f1678179fc4ab13b534ec1	eutils	06133990e861be0fe60c2b428fd025d9	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	c820706d8b22c1d0fe215a9d4a47671d	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=326c7bb8357b1937e090d1724dd9de56
+_md5_=92779328dd54a78bdb1566084754f8c0
