@@ -2,14 +2,24 @@
 Hash: SHA256
 
 DIST gentoo-functions-0.7.tar.bz2 10656 SHA256 0034ff7a65deb8df902683deb1662ce561b7f76ff8561b4ada46cfb18effc7f3 SHA512 7b7c779daeaa37476be488123222af591b357ce1071d8a68694797ce35c8f9c1492da55e4d3059443eb20e08cc7d88eee0e1914efa2b322628c3660c277f7a64 WHIRLPOOL 4b50d0cf0e355d267c2cb6db18211a8d48f48a248190e38227449ef01e39b3968b10a4276ca22b43af9d40706b804730ac81e6ba83efbfcc426a6781dd007cc1
-EBUILD gentoo-functions-0.7.ebuild 948 SHA256 508f923d2314885c50f86864149d998b175b6f59f599ec55920c53f747ba4073 SHA512 5da6e6419560f89dc30fe556f05c35b9551e36bbc0d5369e241dbe92fb6c84fd996efc76df52fcbc2da5bcc71f70b9c1c75adf37fec14f1c63bbfd719a2c3e5d WHIRLPOOL 65f50694d8144bb07e1bc53b7ea2fd9515d51e0b5ad6cd8cb4ad6ed5e526cf67c645092e1b2672ae58ad2419058053806bb3b28bf8d4114c098ac08976446458
+EBUILD gentoo-functions-0.7.ebuild 948 SHA256 f0a631ab2782e0827952c0d5e4f5e1756655efd39937e13b9c2bc539957244ce SHA512 5ff966aea36f0184ea6827a0cd018cfc5d7eef5cbf3204bf6101ff4db7cfa6aa2457b72048ed4aa93336b7cbbcf38863763f3aff8aac36bc346402f417baeb17 WHIRLPOOL 939dc7c0dc7cf3777f6ca5970ab36dba5d328dc32054f3533658c018ad8979f95012b79f2d6965c24802470344537f68001271e9c51fcd9137b2f62e628c9676
 EBUILD gentoo-functions-9999.ebuild 958 SHA256 49ba0985090f0600c37432cc49463f8adae044091e6f38d9e4eb5554642a469d SHA512 f7aff0d51a9254cb8a6de359712a80e1cd8550a775bf0180f310177081202e32b99d0d554c216b5e5a32f7c28fcf507214b1dc75d1869a09a1f68d6befdb6efa WHIRLPOOL 7f56f81b43763992f419047a24281058ad5196181d910dc46dd43d5b6795808f09077b27702f3009f614f8d1c6fdb2c7ed094b18a09750c9d19b1c2b0cf0d9fe
-MISC ChangeLog 3404 SHA256 5d45ab13bd3dc32e6c99a07f1c0106ed151efed393b28c6d4c0e3da25d783ac4 SHA512 5a579c4d820eebdb5ce28a6e1fdab0707e45ce83543adac6df73f416844e712a87b58c4c7cb30bc01ab852d5baba4af0d64abb1ac74fcced3423c65b01139a9c WHIRLPOOL 73e31dc82f17cad7a07196620226c4cdb21bc881945afa8c9553c14b72fb28d7d983d25438d11f976874b0645235d12c7d9399486f114d9dd31d2fb395f5a1ad
+MISC ChangeLog 3511 SHA256 622cc4069b6232f4bc54d04751ef7b8a76becc4e77ee6210fd26f6758503c5cf SHA512 ded1cc822bf04e253ae592e022f2bedaa9cfa158eda50de0e4f5e2fb0fd23bb966bd87b15f19b3d0d3497e1eb6fd1eab81af3daba5e9a769e9568c14dd84b5c3 WHIRLPOOL 19b2e51f6dc0b846093537ffc18d45eb62e894bb52f4525744e190417b377b7fd88abca9323d528b7afac6da44417efa6ba0855863bb7eb18597d9de5c510e15
 MISC metadata.xml 497 SHA256 dc476822c150eee2ffccb4e6c5295fa3207b9006c275c428c26589378e6a709e SHA512 a8a463caa1b0295a30a794308bb107957df0990520b51d5212dcf6d2a80aaea373a2265e8378569f1db5bd3b96f83f49f187a26839dd4a2e5d47ed2e51418449 WHIRLPOOL 811f2249a8e4b35a16e00fde4265e1d5e6f528a5d573e7a435136ce470c7b68941f0dc669b6569496eb79a887ec86041beafbe627fb271daadb253dbfeb9b59b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPuX8kACgkQVWmRsqeSphP8ywCfX1/K4d5UqgukFetw8Z3TI6DD
-KsoAn38soglV3YgG7uUDyl506FTDBZc9
-=+bo2
+iQIcBAEBCAAGBQJT7zVMAAoJEGVpnaTzz9K9GdAP/2yqirix5tOD3Emeg3yoCyJI
+8g8JN+fl2XCHIO7gd5pFNOT8t+aoxI0lFP5tO1NZqLK/hx9vUw4wJyguGFWw6s1B
+93rXL7qQQYUpcEO00DbUC37Uazin1bLqCEOX1vRajZ7GIjd39fkQu1KlLi3/EizG
+M8pA2h+geXmbPiYiopkZvZ9gwfjNay+S6ij0zMzYiNZcT5pZW+gJZ8Gzmnd7pPh0
+yzXbU8FlgOm83oFkFreXM5L6Ur99+NyHcEaCCjotiBr7HJ/J8Z5JChoRF3J/fSya
+TnvaKRGzw/psAzVv9UJBqlP/bf7aLeBbRqkaCI5md5SIC8vUAR7cdmt7lGU83DET
+AKLaX3tK39JsJKvuQLRV8dS+tVfED8sf23m6VEJXxQx88EeE+rKkvS74v5PUTequ
+12WhjXVKCVQaNq8+Zi4zoOhYo/41d9+kIDaVL4mcgKNvuqMHw/v1/L2afJzjvXf5
+JwLuZpaDAyRpFDqNlq06sWuM/tU5Y2djRG6z0Ld6Q6mRccQSlTOazuPiIqlfD2Ln
+x7brIj6pRMchkgFgBiFQQDOL9TWKwpbrkbZs1LiyKsPqdD2pv7A7eZ6d6KUviXZh
+7KDbai77MRw21eGgcqNEBn3AgWnCIHfXYIVcTDpjRZhVp6m/SxpUapWMowDojAR4
+Ms8yPGw4Ted6hOPLJPA6
+=PtpF
 -----END PGP SIGNATURE-----
