@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/rbtools
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rbtools/ChangeLog,v 1.38 2014/08/14 16:46:09 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rbtools/ChangeLog,v 1.39 2014/08/16 10:32:26 johu Exp $
+
+  16 Aug 2014; Johannes Huber <johu@gentoo.org> -rbtools-0.6.ebuild,
+  rbtools-0.6.2.ebuild:
+  amd64 stable, remove old, bug #517766
 
   14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> rbtools-0.6.2.ebuild:
   x86 stable wrt bug #517766
